[2.0.1] LoveLetter2 Работает. Изменена архитектура, добавлены новые функции